# django-hierarchical-data

./: .gitignore  README.MD  db.sqlite3  manage.py  pyproject.toml
file/: admin.py  forms.py  models.py  urls.py  views.py
file/migrations/: 0001_initial.py
file/templates/: files.html
fileuser/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
fileuser/migrations/: 0001_initial.py
hdata/: asgi.py  settings.py  urls.py  wsgi.py
